CHANGES for LIRE
================

2013-10-14
==========
  - Added constructor to GenericDocumentBuilder to allow for selection of Hashing algorithm.
  - Added some test files to excludes in compile task in the ant file.

2013-10-01
==========
  - Fixed bugs in Canny Edge Detector implementation
  - Fixed the same bugs in PHOG

2013-09-30
==========
  - Added convenience methods to VLADBuilder (indexMissing, etc.)
  - Added GenericByteLireFeature and renamed generic feature to
    net.semanticmetadata.lire.imageanalysis.GenericDoubleLireFeature


2013-09-27
==========
  - Added a preliminary implementation of the VLAD descriptor (net.semanticmetadata.lire.imageanalysis.bovw.VLADBuilder)
    It's working, but not all features are available right now. Performance on the Wang data set is slightly better than
    Edge Histogram, and slightly worse than PHOG. On the UCID data set it's quite in the middle.

2013-09-20
==========
  - Added pixel clustering quantization method in package net.semanticmetadata.lire.utils.cv
  - Added fast bilateral filtering based on the code from Frederic Langlet - https://code.google.com/p/kanzi/
  - Added generic double[] k-means in package net.semanticmetadata.lire.utils.cv

2013-09-17
==========
  - Updated to Lucene 4.4.0

2013-09-13
==========
  - Fixed bug in ColorLayout distance metric
  - Fixed bug in JCD re-use
  - Fixed handling of "white only" images in trim(...) function.

2013-08-08
==========
  - Speeded up ParallelIndexer by moving JPEG decoding to the consumer part.

2013-08-08
==========
  - Speeded up OpponentHistogram extraction
  - Speeded up ParallelExtractor by moving JPEG decoding to the consumer part.
  - Speeded up ColorLayoutImpl similarity implementation
  - Small improvements on the JCD similarity implementation

2013-08-07
==========
  - Changed CEDD internal data handling from double to bytes
  - Changed OpponentHistogram internal data handling from double to bytes

2013-08-03
==========